Fix item in move modal not aligned correctly

--- a/components/common/modals/move-modal.module.css
+++ b/components/common/modals/move-modal.module.css
@@ -8,6 +8,7 @@
     display: flex;
     padding: 1rem;
     border-bottom: 1px solid var(--color-secondary-border);
+    align-items: center;
 }
 
 .list li:last-child {
